# LimeReport_Demonstration

./: README.md
0.Demonstration/LimeReport/LimeReport/: CMakeLists.txt  limereport.cpp  limereport.h  main.cpp  main.qml
0.Demonstration/LimeReport/LimeReport/Report/db/: northwind.db
0.Demonstration/LimeReport/LimeReport/Report/lrxml/: Preview_WorkData.lrxml  WorkData.lrxml  simple_group.lrxml  simple_list.lrxml  simple_list_n.lrxml
0.Demonstration/LimeReport/LimeReport/lib/: QtZintd.exp  QtZintd.lib  limereportd.exp  limereportd.lib
0.Demonstration/LimeReport/LimeReport/lib/include/: lrreportengine.h
0.Demonstration/LimeReport/build-LimeReport-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  LimeReport.ilk  build.ninja  cmake_install.cmake
0.Demonstration/LimeReport/build-LimeReport-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/.cmake/api/v1/reply/: cmakeFiles-v1-f182e0e54eccc1b39863.json  codemodel-v2-70dffc076491eb731665.json  directory-.-Debug-b906384e1d8940178cac.json  index-2024-04-07T01-50-29-0814.json  target-LimeReport-Debug-e24d7c09497cec17ae72.json  target-LimeReport_autogen_timestamp_deps-Debug-24be809e2266c53df5dc.json
0.Demonstration/LimeReport/build-LimeReport-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/.cmake/api/v1/reply.prev/: cache-v2-ccada847b0299d56430f.json  codemodel-v2-161539e6fa3f176d7778.json  directory-.-Debug-b1b43dd387bd6fd6c0ec.json  index-2024-04-07T01-22-27-0499.json  target-LimeReport-Debug-28278eb04bda76b685ef.json  target-LimeReport_autogen-Debug-4eac64762f4fdc625c84.json
0.Demonstration/LimeReport/build-LimeReport-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/.qtc_clangd/: compile_commands.json
0.Demonstration/LimeReport/build-LimeReport-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/.qtc_clangd/.cache/clangd/index/: QAbstractItemModel.289637EFE0D4327A.idx  QApplication.C76FC6D37301503D.idx  QGuiApplication.8026FC029AFC9109.idx  QMainWindow.F74E1C0600B3E5EF.idx  QObject.7376F34734F8CF72.idx  QPrintDialog.F9D60B5688D7E90B.idx  QPrinter.9879FE7359346644.idx  cmath.4A1194F1BAE88372.idx  (+268 more)
0.Demonstration/LimeReport/build-LimeReport-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/LimeReport_autogen/: deps  mocs_compilation.cpp
0.Demonstration/LimeReport/build-LimeReport-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/LimeReport_autogen/EWIEGA46WW/: moc_limereport.cpp  moc_limereport.cpp.d  qrc_qml.cpp
